# Adaptive-Multi-Factor-Trust-Aggregation-for-Byzantine-Robust-Federated-Learning-in-IoT-Networks

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  SMOKE_TEST_REPORT.md  aws_master_sweep.py  check_progress.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  resume_sweep.py  watchdog.ps1
.github/workflows/: ci.yml
amfta/: __init__.py
amfta/aggregation/: __init__.py  amfta.py  baselines.py  trust_factors.py
amfta/attacks/: __init__.py  base.py  gaussian_noise.py  label_flipping.py  mimicry.py  sign_flipping.py
amfta/data/: __init__.py  partitioning.py  preprocessing.py
amfta/models/: __init__.py  local_mlp.py
amfta/utils/: __init__.py  logging_utils.py  metrics.py  reproducibility.py
api/: main.py
configs/: config.yaml  config_loader.py
deployment/k8s/: deployment.yaml
docs/: ARCHITECTURE.md  SETUP.md
evaluation/: __init__.py  visualize.py
experiments/: __init__.py  build_paper_figures.py  build_paper_tables.py  run_ablation.py  run_focused_study.py  run_full_study.py  run_main.py  run_scalability.py  run_sweep_resumable.py
monitoring/: prometheus.yml
scripts/: inference.py  setup_data.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_integration.py  test_model_and_data.py  test_trust_factors.py
training/: __init__.py  federated_runner.py
